--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,6 +12,9 @@
 }
 
 body {
+  background-image: linear-gradient(to right, transparent, #F7F7F7, #F7F7F7, #F7F7F7, transparent), url("../images/other/leaves.jpg");
+  background-attachment: fixed;
+  background-position: center;
   width: 70%;
   margin: auto;
 }
