--- a/src/main/resources/templates/birdTemplate.html
+++ b/src/main/resources/templates/birdTemplate.html
@@ -7,23 +7,22 @@
     <title>Bird</title>
 </head>
 <body>
+
 <header>
-
     <nav class="navbar">
-
         <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
-
         <ul class="nav_list">
             <li class="nav_searchbar">
             </li>
             <li>
                 <div class="searchbar">
                     <form th:action="@{/}">
-                        Search: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
+                        Search: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}"
+                                       required/>
                         &nbsp;
-                        <input type="submit" value="Search" />
+                        <input type="submit" value="Search"/>
                         &nbsp;
-                        <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
+                        <input type="button" value="Clear" id="btnClear" onclick="clearSearch()"/>
                     </form>
                 </div>
             </li>
@@ -53,7 +52,8 @@
 <hr>
 
 <footer>
-    <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
+    <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a
+            href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
 </footer>
 
 </body>
