--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <title>FAQ</title>
 </head>
 <body>
+
 <header>
-
     <nav class="navbar">
-
         <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
-
         <ul class="nav_list">
             <li class="nav_searchbar">
             </li>
             <li>
                 <div class="searchbar">
                     <form th:action="@{/}">
-                        Search: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
+                        Search: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}"
+                                       required/>
                         &nbsp;
-                        <input type="submit" value="Search" />
+                        <input type="submit" value="Search"/>
                         &nbsp;
-                        <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
+                        <input type="button" value="Clear" id="btnClear" onclick="clearSearch()"/>
                     </form>
                 </div>
             </li>
@@ -34,36 +33,39 @@
         </ul>
     </nav>
 </header>
-  <h1 class="feature_txt">FAQ</h1>
 
-  <ul class="center-list">
-      <li>
-          <h4>What do I need to bring to a tour?</h4>
-              Please bring your tour confirmation ticket along with snacks and water.
-              Any special equipment you might need is provided by us, but you are
-              welcome to bring your own.
-      </li>
-      <li>
-          <h4>What forms of payment do you accept?</h4>
-              We accept all major credit cards, electronic check, and Paypal.
-              If you would like to set up a payment plan, please contact us at
-              555-555-5555 to connect with a customer service representative.
-      </li>
-      <li>
-          <h4>May I take a bird home with me?</h4>
-              No.
-      </li>
-  </ul>
+<h1 class="feature_txt">FAQ</h1>
+
+<ul class="center-list">
+    <li>
+        <h4>What do I need to bring to a tour?</h4>
+        Please bring your tour confirmation ticket along with snacks and water.
+        Any special equipment you might need is provided by us, but you are
+        welcome to bring your own.
+    </li>
+    <li>
+        <h4>What forms of payment do you accept?</h4>
+        We accept all major credit cards, electronic check, and Paypal.
+        If you would like to set up a payment plan, please contact us at
+        555-555-5555 to connect with a customer service representative.
+    </li>
+    <li>
+        <h4>May I take a bird home with me?</h4>
+        No.
+    </li>
+</ul>
 
 <br>
 
-  <div id="return">
+<div id="return">
     <a href="/">Return Home</a>
-  </div>
-  <hr>
-  <footer class="terms_f">
+</div>
+
+<hr>
+
+<footer class="terms_f">
     <p>&copy JAC Enterprises | <a href="../pages/terms-and-conditions.html" class="terms_conditions">Terms &
-            Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights
+        Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights
         Reserved.</p>
 </footer>
 
