--- a/src/main/resources/templates/regionTemplate.html
+++ b/src/main/resources/templates/regionTemplate.html
@@ -8,24 +8,21 @@
 </head>
 <body>
 
-
 <header>
-
     <nav class="navbar">
-
         <img src="../images/JAC.png" alt="JACEnterprisesLogo" class="companylogo">
-
         <ul class="nav_list">
             <li class="nav_searchbar">
             </li>
             <li>
                 <div class="searchbar">
                     <form th:action="@{/}">
-                        Search: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
+                        Search: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}"
+                                       required/>
                         &nbsp;
-                        <input type="submit" value="Search" />
+                        <input type="submit" value="Search"/>
                         &nbsp;
-                        <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
+                        <input type="button" value="Clear" id="btnClear" onclick="clearSearch()"/>
                     </form>
                 </div>
             </li>
@@ -37,10 +34,7 @@
     </nav>
 </header>
 
-
 <h2 th:text="${region.regionName}">Region Name</h2>
-
-<!--<img th:src="@{../images/regions/{name}.jpg(name=${region.name})}">-->
 
 <div id="return">
     <a href="/">Return Home</a>
@@ -49,7 +43,8 @@
 <hr>
 
 <footer>
-    <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
+    <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a
+            href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
 </footer>
 
 </body>
