uniformity in initial photo/text for all primary pages

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -35,7 +35,14 @@
     </nav>
 </header>
 
-<h1 class="feature_txt">About Us</h1>
+<section class="top_container">
+    <div class="amazon">
+        <h1 class="tours_text_over_image">
+            About Us
+        </h1>
+        <img src="../images/hike_tour_img.jpg" alt="" class="tours_feature_img">
+    </div>
+</section>
 
 <section class="container">
     <table>
