--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -34,7 +34,14 @@
     </nav>
 </header>
 
-<h1 class="feature_txt">FAQ</h1>
+<section class="top_container">
+    <div class="amazon">
+        <h1 class="tours_text_over_image">
+            FAQ
+        </h1>
+        <img src="../images/riverboat_tour_img.jpg" alt="" class="tours_feature_img">
+    </div>
+</section>
 
 <ul class="center-list">
     <li>
