--- a/src/main/resources/templates/toursTemplate.html
+++ b/src/main/resources/templates/toursTemplate.html
@@ -43,7 +43,7 @@
         <h1 class="tours_text_over_image">
             Tours
         </h1>
-        <img src="../images/hike_tour_img.jpg" alt="" class="tours_feature_img">
+        <img src="../images/tours_feature_img.jpg" alt="" class="tours_feature_img">
     </div>
 </section>
 
