--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -40,7 +40,7 @@
         <h1 class="tours_text_over_image">
             About Us
         </h1>
-        <img src="../images/hike_tour_img.jpg" alt="" class="tours_feature_img">
+        <img src="../images/hike_tour_img.jpg" alt="A man looking at a waterfall" class="tours_feature_img">
     </div>
 </section>
 
