--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -39,7 +39,7 @@
         <h1 class="tours_text_over_image">
             FAQ
         </h1>
-        <img src="../images/riverboat_tour_img.jpg" alt="" class="tours_feature_img">
+        <img src="../images/riverboat_tour_img.jpg" alt="Small boats on a river" class="tours_feature_img">
     </div>
 </section>
 
