--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
 <section class="top_container">
     <div class="amazon">
         <h1 class="motto">Birdwatching In Paradise</h1>
-        <img class="amazon_pic" src="../images/amazon_rainforest.jpg" alt="Pic of rainforest">
+        <img class="amazon_pic" src="../images/amazon_rainforest.jpg" alt="The rainforest">
     </div>
     <h2 class="jac_intro">JAC Enterprises</h2>
     <p class="intro">Join JAC Enterprises on an adventure to see some of the world's most beautiful birds
@@ -59,7 +59,7 @@
 <section class="middle_container">
     <div class="bird_part">
         <p class="bird_watching">Bird Watching</p>
-        <img src="../images/birds/birds.png" alt="" class="bird_pic">
+        <img src="../images/birds/birds.png" alt="Birds" class="bird_pic">
     </div>
     <p class="bird_watching_info">Birdwatching is the recreational observation and study of birds.
         This activity gets millions of people around the world out of doors enjoying wildlife. Like hunting
@@ -72,13 +72,13 @@
     <div class="tours_part">
         <h2 class="tours_heading">Tour Photos</h2>
         <a href="../images/tours/canopywalk.jpg" target="_blank">
-            <img src="../images/tours/canopywalk.jpg" alt="Picture of Canopy Bridge" class="skywalk_pic_link">
+            <img src="../images/tours/canopywalk.jpg" alt="A canopy bridge" class="skywalk_pic_link">
         </a>
         <a href="../images/tours/riverhomepgpic.jpg" target="_blank">
-            <img src="../images/tours/riverhomepgpic.jpg" alt="" class="riverboat_pic_link">
+            <img src="../images/tours/riverhomepgpic.jpg" alt="A boat on a river" class="riverboat_pic_link">
         </a>
         <a href="../images/tours/hikehomepgpic.jpg" target="_blank">
-            <img src="../images/tours/hikehomepgpic.jpg" alt="Picture of Forest" class="hiking_pic_link">
+            <img src="../images/tours/hikehomepgpic.jpg" alt="A forest" class="hiking_pic_link">
         </a>
     </div>
 </section>
