--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -52,11 +52,13 @@
         <tr>
             <td><img src="../images/developers/dhana.png"></td>
             <td>
+                <div>
                 Hi! My name is Dhana P Acharya. I literally started from zero when first started coding in 2020.
                 And, now I have more inclination to coding. My passion for coding has dismantled the world
                 of obstacles that appeared on my way. All I do during my free time is coding or watching video
                 related to coding. I am still crawling though ,but I am sure that one day,my firm determination can
                 lead to walk into the world coding.
+                </div>
             </td>
         </tr>
     </table>
@@ -68,10 +70,12 @@
         <tr>
             <td><img src="../images/developers/aisha.png"></td>
             <td>
+                <div>
                 Hi! My name is Aisha (phonetic spelling: ay-zhuh).
                 I am a junior full-stack software developer pursuing my passion in coding,
                 reigniting the days of my youth where I'd make front-end websites of my
                 favorite cartoon/video game characters in the early and late 2000s.
+                </div>
             </td>
         </tr>
     </table>
@@ -83,12 +87,14 @@
         <tr>
             <td><img src="../images/developers/joe.png"></td>
             <td>
+                <div>
                 I have a passion and a mind for efficiency in the flow of commodities across
                 the nation, and now for the flow of information across the web: from the actual
                 highways, to the information super-highway. An idyllic world is one where the
                 customer experience is attractive and user-friendly, with the convenience of both
                 mobile applications and the web. Technology should continue to be as accessible and
                 forward-facing, as it is vital and integral to our daily lives.
+                </div>
             </td>
         </tr>
     </table>
@@ -100,11 +106,13 @@
         <tr>
             <td><img src="../images/developers/scott.png"></td>
             <td>
+                <div>
                 Born in Detroit, I moved to Columbus to attend graduate school at Ohio State. Although my focus was
                 Cognitive/Experimental Psychology, I learned some coding in order to write programs for my experiments.
                 After several years in logistics with Amazon, I decided to take up software development, continuing my
                 education at WCCI. When I am not coding, I enjoy herping, which is similar to birdwatching, but with
                 a focus on reptiles and amphibians.
+                </div>
             </td>
         </tr>
     </table>
@@ -116,6 +124,7 @@
         <tr>
             <td><img src="../images/developers/victor.png"></td>
             <td>
+                <div>
                 Im Victor, born in Cleveland, Ohio i always wanted to make the leap towards a tech career
                 but i never had the opportunity to so in the meantime i decided to practice coding on my own
                 and i always loved it. I did a few courses on udemy and learning through YouTube.
@@ -124,6 +133,7 @@
                 So i decided to enroll to WCCI bootcamp, that has helped me learn in a fast pace environment and
                 im very amazed at the structure of the program. After my certification i will be using it to transition
                 into tech career and finally fulfilling my goal of pursuing a career in tech!
+                </div>
             </td>
         </tr>
     </table>
@@ -135,6 +145,7 @@
         <tr>
             <td><img src="../images/developers/gian.png"></td>
             <td>
+                <div>
                 I’m an experienced Human Resource professional currently working as an HR Partner for
                 Amazon, with over 7 years of experience leading teams.
                 This year, I’m fulfilling a personal goal by pivoting in my career to pursue a future in Tech. After
@@ -143,6 +154,7 @@
                 certification, I will be pursuing a position that will enhance my career. This position would challenge
                 me to continue to learn, grow my knowledge and push me to construct and deliver software that will make
                 a difference.
+                </div>
             </td>
         </tr>
     </table>
