--- a/src/main/resources/templates/birdTemplate.html
+++ b/src/main/resources/templates/birdTemplate.html
@@ -36,7 +36,7 @@
 
 <h2 th:text="${bird.birdName}">Bird</h2>
 
-<img th:src="${'../images/birds/' + bird.id + '.png'}" class="center-image circle-image">
+<img th:src="${'../images/birds/' + bird.id + '.png'}" class="center-image circle-image border-image">
 
 <ul class="center-list">
     <li class="underline">Bird Type</li>
