--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,7 +59,7 @@
 <section class="middle_container">
     <div class="bird_part">
         <p class="bird_watching">Bird Watching</p>
-        <img src="../images/birds/birds.png" alt="Birds" class="bird_pic">
+        <img src="../images/birds/birds.png" alt="Birds" class="bird_pic circle-image">
     </div>
     <p class="bird_watching_info">Birdwatching is the recreational observation and study of birds.
         This activity gets millions of people around the world out of doors enjoying wildlife. Like hunting
