--- a/src/main/resources/templates/tourTemplate.html
+++ b/src/main/resources/templates/tourTemplate.html
@@ -37,7 +37,7 @@
 
 <h2 th:text="${tour.tourName}">Tour Name</h2>
 
-<img th:src="${'../images/tours/' + tour.id + '.png'}" class="center-image">
+<img th:src="${'../images/tours/' + tour.id + '.png'}" class="center-image border-image">
 
 <p th:text="${tour.tourDescription}" class="center-text">Description</p>
 
