--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -35,7 +35,7 @@ header {
   justify-content: space-between;
 }
 
-.nav_list a:hover, a:hover {
+a:hover {
   background-image: radial-gradient(var(--orange), transparent, transparent);
   transition: 0.5s;
   text-transform: uppercase;
@@ -84,7 +84,7 @@ ul {
   display: block;
 }
 
-.center-text, h4, .intro, .bird_watching_info, .terms_h, .middle_container_tours {
+.center-text, h4, h3, .intro, .bird_watching_info, .terms_h, .middle_container_tours {
   text-align: center;
 }
 
@@ -164,11 +164,31 @@ ul {
   border-radius: 50%;
 }
 
-.border-image {
+.border-image, #keyword {
   border: 3px double #23272a;
+}
+
+form {
+  margin-top: 15px;
+}
+
+#keyword {
+  width: 75%;
+  float: left;
+}
+
+#search-button {
+  color: var(--white);
+  background-color: var(--black);
+  font-weight: bold;
+  font-size: 16px;
+  border: none;
+  float: right;
+  margin-top: 2px;
 }
 
 a:link, a:visited {
   color: var(--black);
   text-decoration: none;
+  font-weight: bold;
 }
