--- a/src/main/resources/templates/birdsTemplate.html
+++ b/src/main/resources/templates/birdsTemplate.html
@@ -17,12 +17,9 @@
             <li>
                 <div class="searchbar">
                     <form th:action="@{/}">
-                        Search: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}"
-                                       required/>
-                        &nbsp;
-                        <input type="submit" value="Search"/>
-                        &nbsp;
-                        <input type="button" value="Clear" id="btnClear" onclick="clearSearch()"/>
+                        <input type="text" name="keyword" id="keyword" size="50" placeholder="Search Here" th:value="${keyword}"
+                               required/>
+                        <input type="submit" value="Search" id="search-button"/>
                     </form>
                 </div>
             </li>
