added pretty text for word paradise

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +38,7 @@
 
 <section class="top_container">
     <div class="amazon">
-        <h1 class="motto">Birdwatching In Paradise</h1>
+        <h1 class="motto">Birdwatching in <div class="paradise">Paradise</div></h1>
         <img class="amazon_pic" src="../images/amazon_rainforest.jpg" alt="The rainforest">
     </div>
     <h2 class="jac_intro">JAC Enterprises</h2>
@@ -79,6 +80,8 @@
         </a>
     </div>
 </section>
+
+<br>
 
 <hr>
 
