--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -114,6 +114,10 @@ ul {
   text-shadow: 5px 5px 10px var(--black);
 }
 
+.paradise {
+  font-family: 'Dancing Script', cursive;
+}
+
 .amazon_pic, .tours_feature_img {
   width: 100%;
   height: 500px;
