--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <title>FAQ</title>
@@ -40,7 +41,7 @@
     </div>
 </section>
 
-<ul class="center-list">
+<ul class="center-list format-width">
     <li>
         <h4>What do I need to bring to a tour?</h4>
         Please bring your tour confirmation ticket along with snacks and water.
