--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,7 +37,7 @@
     </nav>
 </header>
 
-<section class="top_container">
+<section>
     <div class="amazon">
         <h1 class="motto">Birdwatching in <div class="paradise">Paradise</div></h1>
         <img class="amazon_pic" src="../images/amazon_rainforest.jpg" alt="The rainforest">
@@ -54,7 +55,7 @@
         you will treasure forever.</p>
 </section>
 
-<section class="middle_container">
+<section>
     <div class="bird_part">
         <p class="bird_watching">Bird Watching</p>
         <img src="../images/birds/birds.png" alt="Birds" class="bird_pic circle-image">
@@ -66,7 +67,7 @@
         is possible anywhere, with birds living on all seven continents.</p>
 </section>
 
-<section class="bottom_container">
+<section>
     <div class="tours_part">
         <h2 class="tours_heading">Tour Photos</h2>
         <a href="../images/tours/canopywalk.jpg" target="_blank">
