--- a/src/main/resources/templates/toursTemplate.html
+++ b/src/main/resources/templates/toursTemplate.html
@@ -4,6 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,7 +46,7 @@
 </section>
 
 <section class="bottom_container">
-    <h3>Current Available Tours:</h3>
+    <h2>Current Available Tours</h2>
     <ul class="center-list">
         <li th:each="tour:${tours}">
             <a th:href="@{'/tour/' + ${tour.id}}" th:text="${tour.tourName}">Tour</a>
