added link to previous page function on certain pages

--- a/src/main/resources/templates/tourTemplate.html
+++ b/src/main/resources/templates/tourTemplate.html
@@ -54,7 +54,7 @@
 <h5 class="center-text">To reserve a tour, please call us at 555-555-5555</h5>
 
 <div id="return">
-    <a href="/">Return Home</a>
+    <a href="javascript:history.back()">Return to Previous Page</a> | <a href="/">Return Home</a>
 </div>
 
 <hr>
