--- a/src/main/resources/templates/birdTemplate.html
+++ b/src/main/resources/templates/birdTemplate.html
@@ -50,7 +50,7 @@
 <br>
 
 <div id="return">
-    <a href="/">Return Home</a>
+    <a href="javascript:history.back()">Return to Previous Page</a> | <a href="/">Return Home</a>
 </div>
 
 <hr>
