fixed footer issue

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -165,7 +165,7 @@
 <hr>
 
 <footer>
-    <p>&copy JAC Enterprises | <a href="../pages/terms-and-conditions.html" class="terms_conditions">Terms &
+    <p>&copy JAC Enterprises | <a href="../termsAndConditions" class="terms_conditions">Terms &
         Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights
         Reserved.</p>
 </footer>
