--- a/src/main/resources/templates/birdTemplate.html
+++ b/src/main/resources/templates/birdTemplate.html
@@ -56,8 +56,9 @@
 <hr>
 
 <footer>
-    <p>&copy JAC Enterprises | <a href="" class="terms_conditions">Terms & Conditions</a> | <a
-            href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights Reserved.</p>
+    <p>&copy JAC Enterprises | <a href="../termsAndConditions" class="terms_conditions">Terms &
+        Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights
+        Reserved.</p>
 </footer>
 
 </body>
