--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -68,8 +68,8 @@
 
 <hr>
 
-<footer class="terms_f">
-    <p>&copy JAC Enterprises | <a href="../pages/terms-and-conditions.html" class="terms_conditions">Terms &
+<footer>
+    <p>&copy JAC Enterprises | <a href="../termsAndConditions" class="terms_conditions">Terms &
         Conditions</a> | <a href="mailto:info@jacenterprises.com" class="contact_us">Contact Us</a> | All Rights
         Reserved.</p>
 </footer>
