changed title tags

--- a/src/main/resources/templates/tourTemplate.html
+++ b/src/main/resources/templates/tourTemplate.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/tour.css">
     <meta charset="UTF-8">
-    <title>Tour</title>
+    <title>Tour | JAC Enterprises</title>
 </head>
 <body>
 
