--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/about.css">
     <meta charset="UTF-8">
-    <title>About Us</title>
+    <title>About Us | JAC Enterprises</title>
 </head>
 <body>
 
