--- a/src/main/resources/templates/birdsTemplate.html
+++ b/src/main/resources/templates/birdsTemplate.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
-    <title>Birds</title>
+    <title>Birds | JAC Enterprises</title>
 </head>
 <body>
 
