edited about us name font

--- a/src/main/resources/static/css/about.css
+++ b/src/main/resources/static/css/about.css
@@ -21,7 +21,7 @@ table {
 }
 
 th+td {
-  text-decoration: underline overline solid #23272a;
+  text-decoration: underline solid #23272a;
   font-weight: bold;
   text-align: center;
 }
