--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -45,7 +45,7 @@
 <section class="container">
     <table>
         <th>
-        <td clas>Dhana Acharya</td>
+        <td>Dhana Acharya</td>
         </th>
         <tr>
             <td><img src="../images/developers/dhana.png"></td>
