--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -54,7 +54,7 @@
     <li>
         <h4>What forms of payment do you accept?</h4>
         <p>
-            We accept all major credit cards, electronic check, and Paypal.
+            We accept all major credit cards, electronic check, and PayPal.
             If you would like to set up a payment plan, please contact us at
             555-555-5555 to connect with a customer service representative.
         </p>
