--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -54,8 +54,8 @@
                 Hi! My name is Dhana P Acharya. I literally started from zero when first started coding in 2020.
                 And, now I have more inclination to coding. My passion for coding has dismantled the world
                 of obstacles that appeared on my way. All I do during my free time is coding or watching video
-                related to coding. I am still crawling though ,but I am sure that one day,my firm determination can
-                lead to walk into the world coding.
+                related to coding. I am still crawling though,but I am sure that one day,my firm determination can
+                lead me to walk into the world of coding.
                 </div>
             </td>
         </tr>
@@ -124,11 +124,11 @@
             <td>
                 <div>
                 Im Victor, born in Cleveland, Ohio i always wanted to make the leap towards a tech career
-                but i never had the opportunity to so in the meantime i decided to practice coding on my own
-                and i always loved it. I did a few courses on udemy and learning through YouTube.
-                At the Start of 2022 i figured It's now or never so i got referred by a friend who completed the WCCI
+                but I never had the opportunity to so in the meantime I decided to practice coding on my own
+                and I always loved it. I did a few courses on udemy and learning through YouTube.
+                At the Start of 2022 I figured It's now or never so i got referred by a friend who completed the WCCI
                 bootcamp.
-                So i decided to enroll to WCCI bootcamp, that has helped me learn in a fast pace environment and
+                So I decided to enroll to WCCI bootcamp, that has helped me learn in a fast pace environment and
                 im very amazed at the structure of the program. After my certification i will be using it to transition
                 into tech career and finally fulfilling my goal of pursuing a career in tech!
                 </div>
