--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -65,6 +65,11 @@
             No.
         </p>
     </li>
+    <li>
+        <h4>What are the safety measures do I need to be aware of?</h4>
+        <p>Snake bite is enevitable in desnse forest like amazon rainforest, therefore, please do wear comfortable knee high boots.
+        Wear long sleeve clothes to prevent from mosquito bites in the forest.</p>
+    </li>
 </ul>
 
 <br>
