formatted code + adjusted about us title img

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -38,7 +38,7 @@
         <h1 class="tours_text_over_image">
             About Us
         </h1>
-        <img src="../images/hike_tour_img.jpg" alt="A man looking at a waterfall" class="tours_feature_img">
+        <img src="../images/other/hike_tour_img.jpg" alt="A man looking at a waterfall" class="tours_feature_img cover">
     </div>
 </section>
 
