edited text of tours and grammer/spelling of some about me profiles

--- a/src/main/resources/templates/tourTemplate.html
+++ b/src/main/resources/templates/tourTemplate.html
@@ -37,7 +37,7 @@
 
 <img th:src="${'../images/tours/' + tour.id + '.png'}" class="center-image border-image">
 
-<p th:text="${tour.tourDescription}" class="center-text">Description</p>
+<p th:text="${tour.tourDescription}" class="center-text italic">Description</p>
 
 <ul class="center-list">
     <li><h3>Birds on this tour:</h3></li>
