--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
                     <form th:action="@{/}">
                         <input type="text" name="keyword" id="keyword" size="50" placeholder="Search Here" th:value="${keyword}"
                                        required/>
-                        <input type="submit" value="Search" id="search-button"/>
+                        <input type="button" onclick="location.href='../sike'" value="Search" id="search-button"/>
                     </form>
                 </div>
             </li>
