--- a/src/main/resources/templates/toursTemplate.html
+++ b/src/main/resources/templates/toursTemplate.html
@@ -24,7 +24,7 @@
                     <form th:action="@{/}">
                         <input type="text" name="keyword" id="keyword" size="50" placeholder="Search Here" th:value="${keyword}"
                                required/>
-                        <input type="submit" value="Search" id="search-button"/>
+                        <input type="button" onclick="location.href='../sike'" value="Search" id="search-button"/>
                     </form>
                 </div>
             </li>
@@ -41,7 +41,7 @@
         <h1 class="tours_text_over_image">
             Tours
         </h1>
-        <img src="../images/tours_feature_img.jpg" alt="" class="tours_feature_img">
+        <img src="../images/tours/tours_feature_img.jpg" alt="" class="tours_feature_img">
     </div>
 </section>
 
