--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -21,7 +21,7 @@
                         <input type="text" name="keyword" id="keyword" size="50" placeholder="Search Here"
                                th:value="${keyword}"
                                required/>
-                        <input type="submit" value="Search" id="search-button"/>
+                        <input type="button" onclick="location.href='../sike'" value="Search" id="search-button"/>
                     </form>
                 </div>
             </li>
@@ -38,7 +38,7 @@
         <h1 class="tours_text_over_image">
             FAQ
         </h1>
-        <img src="../images/riverboat_tour_img.jpg" alt="Small boats on a river" class="tours_feature_img">
+        <img src="../images/other/riverboat_tour_img.jpg" alt="Small boats on a river" class="tours_feature_img">
     </div>
 </section>
 
