--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
                     <form th:action="@{/}">
                         <input type="text" name="keyword" id="keyword" size="50" placeholder="Search Here" th:value="${keyword}"
                                        required/>
-                        <input type="submit" value="Search" id="search-button"/>
+                        <input type="button" onclick="location.href='../sike'" value="Search" id="search-button"/>
                     </form>
                 </div>
             </li>
@@ -40,7 +40,7 @@
 <section>
     <div class="amazon">
         <h1 class="motto">Birdwatching in <div class="paradise">Paradise</div></h1>
-        <img class="amazon_pic" src="../images/amazon_rainforest.jpg" alt="The rainforest">
+        <img class="amazon_pic" src="../images/other/amazon_rainforest.jpg" alt="The rainforest">
     </div>
     <h2 class="jac_intro">JAC Enterprises</h2>
     <p class="intro">Join JAC Enterprises on an adventure to see some of the world's most beautiful birds
