--- a/src/main/resources/templates/terms-and-conditions.html
+++ b/src/main/resources/templates/terms-and-conditions.html
@@ -22,9 +22,10 @@
             <li>
                 <div class="searchbar">
                     <form th:action="@{/}">
-                        <input type="text" name="keyword" id="keyword" size="50" placeholder="Search Here" th:value="${keyword}"
+                        <input type="text" name="keyword" id="keyword" size="50" placeholder="Search Here"
+                               th:value="${keyword}"
                                required/>
-                        <input type="submit" value="Search" id="search-button"/>
+                        <input type="button" onclick="location.href='../sike'" value="Search" id="search-button"/>
                     </form>
                 </div>
             </li>
@@ -37,20 +38,15 @@
 </header>
 
 <h1 class="terms_h">Use of the Services</h1>
-<div class="center-text">
-    <li class="terms_list">By visiting our site and booking a tour from us, you are waiving your legal rights to hold
-        JAC Enterprises accountable for any and all types of injuries and/or death.
-    </li>
-    <li class="terms_list">You also allow the website to track and trace your browser, collect, use and share your
-        location data, and track via third-party cookies for purposes including advertising.
-    </li>
-    <li class="terms_list">This service can delete any content, including your account, they want without reason and
-        without prior notice.
-    </li>
-    <li class="terms_list">This service can change the terms at any time at their discretion without notice to the
-        user.
-    </li>
-</div>
+<p>By visiting our site and booking a tour from us, you are waiving your legal rights to hold
+    JAC Enterprises accountable for any and all types of injuries and/or death.
+    You also allow the website to track and trace your browser, collect, use and share your
+    location data, and track via third-party cookies for purposes including advertising.
+    This service can delete any content, including your account, they want without reason and
+    without prior notice.
+    This service can change the terms at any time at their discretion without notice to the
+    user.
+</p>
 
 <div id="return">
     <a href="/">Return Home</a>
