--- a/src/main/resources/templates/tourTemplate.html
+++ b/src/main/resources/templates/tourTemplate.html
@@ -21,7 +21,7 @@
                     <form th:action="@{/}">
                         <input type="text" name="keyword" id="keyword" size="50" placeholder="Search Here" th:value="${keyword}"
                                required/>
-                        <input type="submit" value="Search" id="search-button"/>
+                        <input type="button" onclick="location.href='../sike'" value="Search" id="search-button"/>
                     </form>
                 </div>
             </li>
@@ -37,7 +37,7 @@
 
 <img th:src="${'../images/tours/' + tour.id + '.png'}" class="center-image border-image">
 
-<p th:text="${tour.tourDescription}" class="center-text">Description</p>
+<p th:text="${tour.tourDescription}" class="center-text italic">Description</p>
 
 <ul class="center-list">
     <li><h3>Birds on this tour:</h3></li>
